--- a/about.html
+++ b/about.html
@@ -776,7 +776,8 @@
                         <a href="https://x.com/kapkidMw?t=oYzYeU3yljOTr3l_b0Mz7A&s=08" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-twitter"></i>
                         </a>
-                        <a href="https://wa.me/qr/IO5Y3FZAL3QDB1" target="_blank" rel="noopener" class="social-link">
+                        <a href="https://wa.me/265882801476?text=Hello%20Peter,%20can%20we%20%20talk%20about%20your%20services?" 
+                        target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
@@ -797,7 +798,7 @@
                     </div>
                     <div class="link-group">
                         <h4>Resources</h4>
-                        <a href="assets/Peter_Blessings_CV.pdf" download>Download CV</a>
+                        <a href="assets/bless.pdf" download="Peter_Blessings_Kaphaso_CV.pdf"> Download CV</a>
                         <a href="mailto:blesskapha@outlook.com">Email Me</a>
                     </div>
                 </div>
