--- a/about.html
+++ b/about.html
@@ -804,7 +804,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Peter Blessings Kaphaso. All rights reserved.</p>
+                <p>&copy; <span id="year"></span> 2025 Peter Blessings Kaphaso. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -858,6 +858,9 @@
                 top: 0,
                 behavior: 'smooth'
             });
+        });
+        document.addEventListener("DOMContentLoaded", () => {
+            document.getElementById("year").textContent = new Date().getFullYear();
         });
     </script>
 </body>
