--- a/contact.html
+++ b/contact.html
@@ -604,7 +604,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Peter Blessings Kaphaso. All rights reserved.</p>
+                <p>&copy; <span id="year"></span> 2025 Peter Blessings Kaphaso. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -630,6 +630,9 @@
                 navMenu.style.padding = '2rem';
                 navMenu.style.borderBottom = '1px solid rgba(255,255,255,0.1)';
             }
+        });
+        document.addEventListener("DOMContentLoaded", () => {
+            document.getElementById("year").textContent = new Date().getFullYear();
         });
     </script>
 </body>
