--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Peter Blessings Kaphaso. All rights reserved.</p>
+                <p>&copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -449,8 +449,11 @@
                 themeIcon.className = 'fas fa-sun';
             }
         });
+        // Set current year in footer
+            document.addEventListener("DOMContentLoaded", () => {
+            document.getElementById("year").textContent = new Date().getFullYear();
+        });
 
-        
     </script>
 </body>
 </html>
