--- a/services.html
+++ b/services.html
@@ -737,7 +737,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Peter Blessings Kaphaso. All rights reserved.</p>
+                <p>&copy; <span id="year"></span> 2025 Peter Blessings Kaphaso. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -791,6 +791,10 @@
                 top: 0,
                 behavior: 'smooth'
             });
+        });
+        // Set current year in footer
+        document.addEventListener("DOMContentLoaded", () => {
+            document.getElementById("year").textContent = new Date().getFullYear();
         });
     </script>
 </body>
