--- a/skills.html
+++ b/skills.html
@@ -232,7 +232,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Peter Blessings Kaphaso. All rights reserved.</p>
+                <p>&copy; <span id="year"></span> 2025 Peter Blessings Kaphaso. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -240,7 +240,7 @@
     <button class="back-to-top" id="backToTop" aria-label="Back to top">
         <i class="fas fa-chevron-up"></i>
     </button>
-
+    
     <script src="script.js"></script>
 </body>
 </html>
