--- a/experience.html
+++ b/experience.html
@@ -877,7 +877,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-               &copy; <span id="year"></span> 2025 Peter Blessings Kaphaso. All rights reserved.
+                &copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.
             </div>
         </div>
     </footer>
