--- a/skills.html
+++ b/skills.html
@@ -232,7 +232,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> 2025 Peter Blessings Kaphaso. All rights reserved.</p>
+                <p>&copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.</p>
             </div>
         </div>
     </footer>
