--- a/about.html
+++ b/about.html
@@ -386,87 +386,100 @@
 
         /* Footer (Consistent with Landing Page) */
         .footer {
-            background-color: var(--nav-bg-solid);
-            color: var(--text-primary);
-            padding: 4rem 0 2rem;
-            border-top: 1px solid var(--border-color);
+            border-top: 1px solid rgba(148,163,184,0.25);
+            background: radial-gradient(circle at top, rgba(15,23,42,0.9), #020617);
+            padding: 2.8rem 0 2rem;
+            margin-top: 2.5rem;
         }
 
-        .footer-content {
+        .footer-inner {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
             gap: 2.5rem;
-            margin-bottom: 3rem;
+            justify-content: space-between;
+            align-items: flex-start;
         }
 
-        .footer-info {
-            flex: 2;
-            min-width: 300px;
+        .footer-main {
+            flex: 1.4;
+            min-width: 260px;
         }
 
-        .footer-info h3 {
-            font-size: 1.8rem;
-            margin-bottom: 1rem;
-            color: var(--primary-blue);
+        .footer-main h3 {
+            font-size: 1.3rem;
+            margin-bottom: 0.6rem;
         }
 
-        .footer-info p {
+        .footer-main p {
+            font-size: 0.88rem;
+            color: var(--text-muted);
+            max-width: 360px;
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 0.6rem;
+            margin-top: 1.1rem;
+        }
+
+        .social-link {
+            width: 32px;
+            height: 32px;
+            border-radius: 999px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             font-size: 0.95rem;
-            line-height: 1.8;
-            margin-bottom: 1.5rem;
-            color: var(--text-secondary);
+            color: var(--text-muted);
+            border: 1px solid rgba(148,163,184,0.5);
+            background: rgba(15,23,42,0.9);
+            transition: all 0.25s ease;
         }
 
-        .footer-social .social-link {
-            background-color: rgba(99, 102, 241, 0.1);
-            border: 1px solid rgba(99, 102, 241, 0.3);
-        }
-
-        .footer-social .social-link:hover {
-            background-color: var(--primary-blue);
-            color: white;
-            border-color: var(--primary-blue);
+        .social-link:hover {
+            color: #e5e7eb;
+            border-color: var(--accent);
+            box-shadow: 0 0 14px rgba(34,197,94,0.7);
+            transform: translateY(-1px);
         }
 
         .footer-links {
-            flex: 3;
+            flex: 1.2;
+            min-width: 260px;
             display: flex;
+            gap: 2.2rem;
             flex-wrap: wrap;
-            gap: 2rem;
-            justify-content: space-around;
-        }
-
-        .link-group {
-            display: flex;
-            flex-direction: column;
-            gap: 0.75rem;
-            min-width: 120px;
+            font-size: 0.86rem;
         }
 
         .link-group h4 {
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-bottom: 0.75rem;
-            color: var(--primary-blue);
+            font-size: 0.82rem;
+            text-transform: uppercase;
+            letter-spacing: 0.18em;
+            color: var(--text-muted);
+            margin-bottom: 0.7rem;
         }
 
         .link-group a {
-            color: var(--text-secondary);
-            font-size: 0.95rem;
-            transition: color 0.3s ease;
+            display: block;
+            margin-bottom: 0.35rem;
+            color: var(--text-main);
+            opacity: 0.7;
+            transition: opacity 0.2s ease, color 0.2s ease;
         }
 
         .link-group a:hover {
-            color: var(--accent-green);
+            opacity: 1;
+            color: var(--accent);
         }
 
         .footer-bottom {
+            margin-top: 2.2rem;
             text-align: center;
-            border-top: 1px solid rgba(99, 102, 241, 0.2);
-            padding-top: 2rem;
-            font-size: 0.9rem;
-            color: var(--text-secondary);
+            font-size: 0.78rem;
+            color: var(--text-muted);
+            border-top: 1px solid rgba(148,163,184,0.25);
+            padding-top: 1.2rem;
         }
 
         /* Back to Top Button */
@@ -762,10 +775,13 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
+            <div class="footer-inner">
+                <div class="footer-main">
                     <h3>Peter Blessings Kaphaso</h3>
-                    <p>Full-Stack Developer & Founder of Sabali Solutions, passionate about creating digital solutions that make a difference.</p>
+                    <p>
+                        Full‑Stack Developer &amp; Founder of Sabali Solutions, focused on building
+                        dependable digital products that unlock real value for businesses and institutions.
+                    </p>
                     <div class="footer-social">
                         <a href="https://github.com/blessingskaphaso" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-github"></i>
@@ -776,12 +792,15 @@
                         <a href="https://x.com/kapkidMw?t=oYzYeU3yljOTr3l_b0Mz7A&s=08" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-twitter"></i>
                         </a>
+                        <a href="https://www.instagram.com/kapkid_mw/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fab fa-instagram"></i>
                         <a href="https://wa.me/265882801476?text=Hello%20Peter,%20can%20we%20%20talk%20about%20your%20services?" 
                         target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
                 </div>
+
                 <div class="footer-links">
                     <div class="link-group">
                         <h4>Navigation</h4>
@@ -804,7 +823,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.</p>
+                &copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.
             </div>
         </div>
     </footer>
