--- a/contact.html
+++ b/contact.html
@@ -341,26 +341,100 @@
 
         /* Footer Preservation Styling */
         .footer {
-            margin-top: 4rem;
-            padding: 4rem 0 2rem;
-            background: rgba(10, 10, 12, 0.9);
-            border-top: 1px solid var(--border-glass);
+            border-top: 1px solid rgba(148,163,184,0.25);
+            background: radial-gradient(circle at top, rgba(15,23,42,0.9), #020617);
+            padding: 2.8rem 0 2rem;
+            margin-top: 2.5rem;
         }
 
-        .footer h3, .footer h4 { color: #fff; margin-bottom: 1.5rem; }
-        .footer p { color: var(--text-muted); margin-bottom: 1.5rem; }
-        .footer-content { display: grid; grid-template-columns: 1.5fr 2fr; gap: 4rem; margin-bottom: 3rem; }
-        .footer-links { display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; }
-        .link-group a { display: block; color: var(--text-muted); text-decoration: none; margin-bottom: 0.75rem; transition: 0.3s; }
-        .link-group a:hover { color: var(--cyan); }
-        .footer-social { display: flex; gap: 1rem; }
-        .social-link { width: 40px; height: 40px; border-radius: 50%; border: 1px solid var(--border-glass); display: flex; align-items: center; justify-content: center; color: #fff; text-decoration: none; transition: 0.3s; }
-        .social-link:hover { border-color: var(--cyan); color: var(--cyan); background: rgba(15, 246, 255, 0.05); }
-        .footer-bottom { text-align: center; padding-top: 2rem; border-top: 1px solid var(--border-glass); color: var(--text-muted); font-size: 0.9rem; }
+        .footer-inner {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2.5rem;
+            justify-content: space-between;
+            align-items: flex-start;
+        }
 
-        @media (max-width: 768px) {
-            .footer-content { grid-template-columns: 1fr; gap: 2rem; }
-            .footer-links { grid-template-columns: 1fr 1fr; }
+        .footer-main {
+            flex: 1.4;
+            min-width: 260px;
+        }
+
+        .footer-main h3 {
+            font-size: 1.3rem;
+            margin-bottom: 0.6rem;
+        }
+
+        .footer-main p {
+            font-size: 0.88rem;
+            color: var(--text-muted);
+            max-width: 360px;
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 0.6rem;
+            margin-top: 1.1rem;
+        }
+
+        .social-link {
+            width: 32px;
+            height: 32px;
+            border-radius: 999px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0.95rem;
+            color: var(--text-muted);
+            border: 1px solid rgba(148,163,184,0.5);
+            background: rgba(15,23,42,0.9);
+            transition: all 0.25s ease;
+        }
+
+        .social-link:hover {
+            color: #e5e7eb;
+            border-color: var(--accent);
+            box-shadow: 0 0 14px rgba(34,197,94,0.7);
+            transform: translateY(-1px);
+        }
+
+        .footer-links {
+            flex: 1.2;
+            min-width: 260px;
+            display: flex;
+            gap: 2.2rem;
+            flex-wrap: wrap;
+            font-size: 0.86rem;
+        }
+
+        .link-group h4 {
+            font-size: 0.82rem;
+            text-transform: uppercase;
+            letter-spacing: 0.18em;
+            color: var(--text-muted);
+            margin-bottom: 0.7rem;
+        }
+
+        .link-group a {
+            display: block;
+            margin-bottom: 0.35rem;
+            color: var(--text-main);
+            opacity: 0.7;
+            transition: opacity 0.2s ease, color 0.2s ease;
+        }
+
+        .link-group a:hover {
+            opacity: 1;
+            color: var(--accent);
+        }
+
+        .footer-bottom {
+            margin-top: 2.2rem;
+            text-align: center;
+            font-size: 0.78rem;
+            color: var(--text-muted);
+            border-top: 1px solid rgba(148,163,184,0.25);
+            padding-top: 1.2rem;
         }
 
         /* Back to Top */
@@ -560,12 +634,15 @@
     </main>
 
     <!-- ORIGINAL FOOTER UNCHANGED -->
-    <footer class="footer">
+<footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
+            <div class="footer-inner">
+                <div class="footer-main">
                     <h3>Peter Blessings Kaphaso</h3>
-                    <p>Full-Stack Developer & Founder of Sabali Solutions, passionate about creating digital solutions that make a difference.</p>
+                    <p>
+                        Full‑Stack Developer &amp; Founder of Sabali Solutions, focused on building
+                        dependable digital products that unlock real value for businesses and institutions.
+                    </p>
                     <div class="footer-social">
                         <a href="https://github.com/blessingskaphaso" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-github"></i>
@@ -576,12 +653,16 @@
                         <a href="https://x.com/kapkidMw?t=oYzYeU3yljOTr3l_b0Mz7A&s=08" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-twitter"></i>
                         </a>
+                        <a href="https://www.instagram.com/kapkid_mw/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fab fa-instagram"></i>
+                        </a>
                         <a href="https://wa.me/265882801476?text=Hello%20Peter,%20can%20we%20%20talk%20about%20your%20services?" 
                         target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
                 </div>
+
                 <div class="footer-links">
                     <div class="link-group">
                         <h4>Navigation</h4>
@@ -604,7 +685,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.</p>
+                &copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.
             </div>
         </div>
     </footer>
