--- a/experience.html
+++ b/experience.html
@@ -848,6 +848,8 @@
                         <a href="https://x.com/kapkidMw?t=oYzYeU3yljOTr3l_b0Mz7A&s=08" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-twitter"></i>
                         </a>
+                        <a href="https://www.instagram.com/kapkid_mw/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fab fa-instagram"></i>
                         <a href="https://wa.me/265882801476?text=Hello%20Peter,%20can%20we%20%20talk%20about%20your%20services?" 
                         target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-whatsapp"></i>
