--- a/index.html
+++ b/index.html
@@ -234,65 +234,102 @@
         }
 
         /* --- DETAILED FOOTER --- */
+       /* FOOTER */
         .footer {
-            background-color: var(--nav-bg);
-            border-top: 1px solid var(--border-color);
-            padding: 60px 0 20px;
-            margin-top: 80px;
+            border-top: 1px solid rgba(148,163,184,0.25);
+            background: radial-gradient(circle at top, rgba(15,23,42,0.9), #020617);
+            padding: 2.8rem 0 2rem;
+            margin-top: 2.5rem;
         }
 
-        .footer-content {
-            display: grid;
-            grid-template-columns: 1.5fr 1fr 1fr 1fr;
-            gap: 40px;
-            margin-bottom: 40px;
+        .footer-inner {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 2.5rem;
+            justify-content: space-between;
+            align-items: flex-start;
         }
 
-        .footer-info h3 { color: var(--primary-blue); margin-bottom: 15px; }
-        .footer-info p { color: var(--text-secondary); font-size: 0.95rem; margin-bottom: 20px; }
+        .footer-main {
+            flex: 1.4;
+            min-width: 260px;
+        }
 
-        .footer-social { display: flex; gap: 15px; }
+        .footer-main h3 {
+            font-size: 1.3rem;
+            margin-bottom: 0.6rem;
+        }
+
+        .footer-main p {
+            font-size: 0.88rem;
+            color: var(--text-muted);
+            max-width: 360px;
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 0.6rem;
+            margin-top: 1.1rem;
+        }
+
         .social-link {
-            width: 40px;
-            height: 40px;
-            background: var(--card-bg);
-            border: 1px solid var(--border-color);
-            border-radius: 50%;
+            width: 32px;
+            height: 32px;
+            border-radius: 999px;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: var(--text-primary);
-            text-decoration: none;
-            transition: var(--transition);
+            font-size: 0.95rem;
+            color: var(--text-muted);
+            border: 1px solid rgba(148,163,184,0.5);
+            background: rgba(15,23,42,0.9);
+            transition: all 0.25s ease;
         }
-        .social-link:hover { background: var(--primary-blue); color: white; border-color: var(--primary-blue); }
 
-        .link-group h4 { margin-bottom: 20px; font-size: 1.1rem; }
+        .social-link:hover {
+            color: #e5e7eb;
+            border-color: var(--accent);
+            box-shadow: 0 0 14px rgba(34,197,94,0.7);
+            transform: translateY(-1px);
+        }
+
+        .footer-links {
+            flex: 1.2;
+            min-width: 260px;
+            display: flex;
+            gap: 2.2rem;
+            flex-wrap: wrap;
+            font-size: 0.86rem;
+        }
+
+        .link-group h4 {
+            font-size: 0.82rem;
+            text-transform: uppercase;
+            letter-spacing: 0.18em;
+            color: var(--text-muted);
+            margin-bottom: 0.7rem;
+        }
+
         .link-group a {
             display: block;
-            text-decoration: none;
-            color: var(--text-secondary);
-            margin-bottom: 10px;
-            font-size: 0.9rem;
-            transition: var(--transition);
+            margin-bottom: 0.35rem;
+            color: var(--text-main);
+            opacity: 0.7;
+            transition: opacity 0.2s ease, color 0.2s ease;
         }
-        .link-group a:hover { color: var(--primary-blue); padding-left: 5px; }
+
+        .link-group a:hover {
+            opacity: 1;
+            color: var(--accent);
+        }
 
         .footer-bottom {
-            padding-top: 20px;
-            border-top: 1px solid var(--border-color);
+            margin-top: 2.2rem;
             text-align: center;
-            color: var(--text-secondary);
-            font-size: 0.9rem;
-        }
-
-        @media (max-width: 768px) {
-            .footer-content {
-                grid-template-columns: 1fr;
-                text-align: center;
-            }
-            .footer-info p { margin: 0 auto 20px; }
-            .footer-social { justify-content: center; }
+            font-size: 0.78rem;
+            color: var(--text-muted);
+            border-top: 1px solid rgba(148,163,184,0.25);
+            padding-top: 1.2rem;
         }
         
     </style>
@@ -368,10 +405,13 @@
 
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-info">
+            <div class="footer-inner">
+                <div class="footer-main">
                     <h3>Peter Blessings Kaphaso</h3>
-                    <p>Full-Stack Developer & Founder of Sabali Solutions, passionate about creating digital solutions that make a difference.</p>
+                    <p>
+                        Full‑Stack Developer &amp; Founder of Sabali Solutions, focused on building
+                        dependable digital products that unlock real value for businesses and institutions.
+                    </p>
                     <div class="footer-social">
                         <a href="https://github.com/blessingskaphaso" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-github"></i>
@@ -382,12 +422,15 @@
                         <a href="https://x.com/kapkidMw?t=oYzYeU3yljOTr3l_b0Mz7A&s=08" target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-twitter"></i>
                         </a>
+                        <a href="https://www.instagram.com/kapkid_mw/" target="_blank" rel="noopener" class="social-link">
+                            <i class="fab fa-instagram"></i>
                         <a href="https://wa.me/265882801476?text=Hello%20Peter,%20can%20we%20%20talk%20about%20your%20services?" 
                         target="_blank" rel="noopener" class="social-link">
                             <i class="fab fa-whatsapp"></i>
                         </a>
                     </div>
                 </div>
+
                 <div class="footer-links">
                     <div class="link-group">
                         <h4>Navigation</h4>
@@ -396,21 +439,21 @@
                         <a href="services.html">Services</a>
                         <a href="experience.html">Experience</a>
                     </div>
-                </div>
-                <div class="link-group">
-                    <h4>More</h4>
-                    <a href="skills.html">Skills</a>
-                    <a href="projects.html">Projects</a>
-                    <a href="contact.html">Contact</a>
-                </div>
-                <div class="link-group">
-                    <h4>Resources</h4>
-                    <a href="assets/bless.pdf" download="Peter_Blessings_Kaphaso_CV.pdf"> Download CV</a>
-                    <a href="mailto:blesskapha@outlook.com">Email Me</a>
+                    <div class="link-group">
+                        <h4>More</h4>
+                        <a href="skills.html">Skills</a>
+                        <a href="projects.html">Projects</a>
+                        <a href="contact.html">Contact</a>
+                    </div>
+                    <div class="link-group">
+                        <h4>Resources</h4>
+                        <a href="assets/bless.pdf" download="Peter_Blessings_Kaphaso_CV.pdf"> Download CV</a>
+                        <a href="mailto:blesskapha@outlook.com">Email Me</a>
+                    </div>
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.</p>
+                &copy; <span id="year"></span> Peter Blessings Kaphaso. All rights reserved.
             </div>
         </div>
     </footer>
