Update stat label for clarity in hero section

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
                             <div class="image-backdrop"></div>
                         </div>
                         <div class="hero-stats">
-                            <div class="stat-item"><span class="stat-number">3+</span><br><span class="stat-label">Years Exp</span></div>
+                            <div class="stat-item"><span class="stat-number">3+</span><br><span class="stat-label">Years Experience</span></div>
                             <div class="stat-item"><span class="stat-number">5+</span><br><span class="stat-label">Projects</span></div>
                             <div class="stat-item"><span class="stat-number">5+</span><br><span class="stat-label">Clients</span></div>
                         </div>
