Update certification label for clarity in about section

--- a/about.html
+++ b/about.html
@@ -727,7 +727,7 @@
                             <h3>Certifications & Training</h3>
                             <ul class="certification-list">
                                 <li>Data Science Essentials with Python</li>
-                                <li>Cyber Security Certificate</li>
+                                <li>Cyber Security</li>
                                 <li>Fundamentals of Accelerated computing using CUDA C/C++</li>
                                 <li>Research Data Collection & Analysis (EXCEL, SPSS & STATA)</li>
                             </ul>
