--- a/experience.html
+++ b/experience.html
@@ -724,7 +724,7 @@
                             </ul>
                             <div class="job-tech">
                                 <span class="tech-tag">React</span>
-                                <span class="tech-tag">Node.js</span>
+                                <span class="tech-tag">Flutter</span>
                                 <span class="tech-tag">Laravel</span>
                                 <span class="tech-tag">MySQL</span>
                             </div>
